Bug 90830 - [bsw bisected regression] GPU hang for spec.arb_gpu_shader5.execution.sampler_array_indexing.vs-nonzero-base
Summary: [bsw bisected regression] GPU hang for spec.arb_gpu_shader5.execution.sampler...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Matt Turner
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-03 16:42 UTC by Mark Janes
Modified: 2015-06-03 19:44 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2015-06-03 16:42:59 UTC
Bisected to mesa 6c846dc57b1d6f3e015a604dba1976f96c4be9e9

Previously, this test reported a pass on braswell.  This test and other sampler_array_indexing tests result in GPU hang.
Comment 1 Matt Turner 2015-06-03 18:20:07 UTC
commit d46d04529b9c1e55b4c3b65a7078bbbd7ab1a810
Author: Matt Turner <mattst88@gmail.com>
Date:   Tue Jun 2 17:46:38 2015 -0700

    i965: Use UW-typed immediate in multiply inst.

should fix it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.